--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,8 @@
-# This file can be used to install module dependencies for unit testing
-# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+    archive: "puppet/archive"
+    file_capability: "stm/file_capability"
+    stdlib: "puppetlabs/stdlib"
+  symlinks:
+    async_profiler: "#{source_dir}"
